# testcov

./: .coveragerc  setup.cfg  tox.ini
src/gruik/: __init__.py
tests/: test_a.py
