[metadata]
name = gruik
description = gruik gruik

[options]
packages = find:
package_dir =
    =src
include_package_data = True
test_require =
    coverage
    pytest
    pytest-cov

[options.packages.find]
where=src

[tool:pytest]
testpaths = tests
addopts =
    -rsx
    --tb=short
    --cov-report=term-missing
